--- a/docs/Вариативная часть задания.md
+++ b/docs/Вариативная часть задания.md
@@ -1,1 +1,212 @@
+# Базовая часть задания
+## Тема: 
+Создание Telegram-bot’а на языке программирования Python
+## Цель проекта: 
+создать Telegram-bot’ на Python, позволяющего
+•	Узнать информацию об основных персонажах кино- и комикс- вселенной Marvel.
+•	Изучить информацию о самых культовых фильмах и сериалах киновселенной Marvel.
+•	Ознакомиться с порядком просмотра фильмов, так как вселенная достаточно обширная и разобраться самостоятельно порой бывает сложно.
+## Порядок выполнения работы:
+#### 1.	Первым шагом необходимо было изучить библиотеки python, с помощью которых можно создавать бота. Для работы была выбрана наиболее подходящая библиотека: python-telegram-bot. Далее её необходимо было установить. Через командную строку вводим pip install python-telegram-bot
+#### 2.	Далее для работы нам нужно получить собственный токен для Telegram-bot. В боте @BotFather создаём бота и получаем собственный токен, далее он понадобится нам в коде.
+#### 3.	Далее начинаем работать над ботом непосредственно в коде:
+###### 3.1.	Подключаем библиотеки:
+import logging
+from telegram import Update, InlineKeyboardButton, InlineKeyboardMarkup
+from telegram.ext import Application, CommandHandler, CallbackQueryHandler, ContextTypes
+###### 3.2.	Сохраняем наш токен в переменной с названием TOKEN
+###### 3.3.	Настраиваем логгирование:
+logging.basicConfig(
+    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',
+    level=logging.INFO
+)
+logger = logging.getLogger(__name__)
+###### 3.4.	Вводим данные о фильмах, персонажах, комиксах:
+data = {
+    "movies": {
+    "avengers_endgame": {
+        "title": "Мстители: Финал",
+        "year": 2019,
+        "description": "Оставшиеся герои пытаются исправить последствия щелчка Таноса. Фильм содержит путешествия во времени, возвращение погибших персонажей и эпическую битву против Таноса. Завершает 22-фильмовую Сагу Бесконечности, принося жертвы (Железный человек, Чёрная вдова) и устанавливая новый статус-кво. Содержит множество отсылок к предыдущим фильмам франшизы.",
+        "image_url": "https://avatars.mds.yandex.net/i?id=e729dcf1495aa58ad91fc470f8937945_l-4338066-images-thumbs&n=13",
+        "required_viewing": "Все фильмы Саги Бесконечности, особенно 'Мстители: Война бесконечности'"
+    } ,
+#ввод остальных фильмов
+    "blackpanter": {
+            "title": "Чёрная пантера",
+            "year": 2018,
+            "description": "После смерти отца Т'Чалла возвращается в скрытую технологически развитую африканскую страну Ваканда, чтобы занять трон. Его правление оспаривает Эрик Киллмонгер, раскрывающий тёмные секреты прошлого. Фильм отличается уникальной культурной эстетикой, поднимает важные социальные вопросы и представляет вибраниум - самый прочный материал во вселенной.",
+        "image_url": "http://images-s.kinorium.com/movie/poster/566968/w1500_45947143.jpg",
+        "required_viewing": "'Капитан Америка: Гражданская война' (первое появление Т'Чаллы)."
+    } ,
+    },
+    "characters": {
+    "iron_man": {
+        "name": "Железный человек (Тони Старк)",
+        "description": "Гениальный изобретатель-миллиардер, создавший высокотехнологичный костюм. Основатель Мстителей.",
+        "films": [
+            "Железный человек (2008)",
+            "Железный человек 2 (2010)",
+            "Мстители (2012)",
+            "Железный человек 3 (2013)",
+            "Мстители: Эра Альтрона (2015)",
+            "Первый мститель: Противостояние (2016)",
+            "Человек-паук: Возвращение домой (2017, камео)",
+            "Мстители: Война бесконечности (2018)",
+            "Мстители: Финал (2019)"
+        ],
+        "image_url": "https://www.nashe.ru/storage/62731/conversions/zGdBGpsXCq-social.jpg"
+    },
+#описание остальных персонажей
+    "loki": {
+        "name": "Локи",
+        "description": "Бог обмана, брат Тора, антигерой с комплексом неполноценности.",
+        "films": [
+            "Тор (2011)",
+            "Мстители (2012)",
+            "Тор 2: Царство тьмы (2013)",
+            "Тор: Рагнарёк (2017)",
+            "Мстители: Война бесконечности (2018)",
+            "Локи (сериал, 2021)",
+            "Доктор Стрэндж: В мультивселенной безумия (2022, альтернативная версия)"
+        ],
+        "image_url": "https://img.championat.com/s/1350x900/news/big/s/b/startovali-syomki-vtorogo-sezona-seriala-loki-s-tomom-hiddlstonom_16545839271434379306.jpg"
+    }
+    },
+    "comics": {
+    "infinity_gauntlet": {
+        "title": "Перчатка Бесконечности (1991)",
+        "description": "Культовая арка, где Танос собирает все Камни Бесконечности, становясь богом. Мстители и космические существа объединяются, чтобы остановить его.",
+        "characters": ["Танос", "Мстители", "Серебряный Сёрфер"],
+        "events": "Сага Бесконечности",
+        "image_url": "https://static.wikia.nocookie.net/marvel/images/e/e1/Infinity_Gauntlet_Vol_1_1.jpg/revision/latest/scale-to-width-down/1200?cb=20200910120209&path-prefix=ru"
+    },
+    #вводим данные об стальных комиксах
 
+    "secret_invasion": {
+        "title": "Тайное вторжение (2008)",
+        "description": "Скруллы годами заменяли ключевых героев и политиков, готовя масштабное вторжение на Землю. Никому нельзя доверять.",
+        "characters": ["Капитан Марвел", "Железный человек", "Человек-паук"],
+        "events": "Secret Invasion",
+        "image_url": "https://cdn.marvel.com/u/prod/marvel/i/mg/2/f0/511c078aa9163/standard_incredible.jpg"
+    }
+}
+}
+###### 3.5.	Прописываем функцию /start. Это начало работы нашего бота, то, что пользователь видит, когда впервые заходит в него:
+async def start(update: Update, context: ContextTypes.DEFAULT_TYPE) -> None:
+    """Главное меню"""
+    if update.message:
+        message = update.message
+    else:
+        message = update.callback_query.message
+
+    keyboard = [
+        [InlineKeyboardButton("🎬 Фильмы", callback_data='show_movies')],
+        [InlineKeyboardButton("🦸 Персонажи", callback_data='show_characters')],
+        [InlineKeyboardButton("📚 Комиксы", callback_data='show_comics')],
+    ]
+    await message.reply_text(
+        'Добро пожаловать в энциклопедию Marvel! Выберите категорию:',
+        reply_markup=InlineKeyboardMarkup(keyboard)
+    )
+###### 3.6.	Обрабатываем кнопки с выбором категорий:
+async def handle_button(update: Update, context: ContextTypes.DEFAULT_TYPE) -> None:
+    """Обработчик кнопок"""
+    query = update.callback_query
+    await query.answer()
+
+    try:
+        if query.data == 'back':
+            await start(update, context)
+        elif query.data == 'show_movies':
+            await query.message.reply_text("Вы выбрали категорию: 🎬 Фильмы")
+            await show_category(query, "movies", "Фильмы")
+        elif query.data == 'show_characters':
+            await query.message.reply_text("Вы выбрали категорию: 🦸 Персонажи")
+            await show_category(query, "characters", "Персонажи")
+        elif query.data == 'show_comics':
+            await query.message.reply_text("Вы выбрали категорию: 📚 Комиксы")
+            await show_category(query, "comics", "Комиксы")
+        elif query.data.startswith('movie_'):
+            await show_item(query, "movies", query.data[6:])
+        elif query.data.startswith('character_'):
+            await show_item(query, "characters", query.data[10:])
+        elif query.data.startswith('comic_'):
+            await show_item(query, "comics", query.data[6:])
+    except Exception as e:
+        logger.error(f"Ошибка: {e}")
+        await query.message.reply_text("Произошла ошибка. Попробуйте еще раз.")
+Также было важно включить в этот раздел обработку ошибок для комфорта пользователя.
+###### 3.7.	Обработка выбора категории:
+async def show_category(query, category, title):
+    """Показать меню категории"""
+    items = data[category]
+    keyboard = []
+
+    for item_id in items:
+        item = items[item_id]
+        btn_text = item.get('name', item.get('title'))
+        callback_data = f"{category[:-1]}_{item_id}"
+        keyboard.append([InlineKeyboardButton(btn_text, callback_data=callback_data)])
+
+    keyboard.append([InlineKeyboardButton("🔙 Назад", callback_data='back')])
+
+    await query.message.reply_text(
+        text=f"Выберите {title.lower()}:",
+        reply_markup=InlineKeyboardMarkup(keyboard)
+    )
+###### 3.8.	Обработка выбора элементов в категории:
+async def show_item(query, category, item_id):
+    """Показать информацию о выбранном элементе с картинкой"""
+    item = data[category][item_id]
+    text = f"<b>{item.get('name', item.get('title'))}</b>"
+
+    if 'year' in item:
+        text += f" ({item['year']})"
+
+    text += f"\n\n{item['description']}"
+
+    # Добавляем список фильмов для персонажей
+    if category == 'characters' and 'films' in item and item['films']:
+        text += "\n\n<b>Появляется в фильмах:</b>\n"
+        text += "\n".join(f"• {film}" for film in item['films'])
+
+    # Добавляем рекомендации для фильмов
+    if category == 'movies' and 'required_viewing' in item:
+        text += f"\n\n<u>Что посмотреть перед просмотром:</u>\n{item['required_viewing']}"
+
+    # Добавляем информацию о персонажах и событиях для комиксов
+    if category == 'comics':
+        if 'characters' in item and item['characters']:
+            text += f"\n\n<b>Ключевые персонажи:</b>\n{', '.join(item['characters'])}"
+        if 'events' in item:
+            text += f"\n\n<b>События:</b> {item['events']}"
+
+    # Отправляем картинку с описанием
+    await query.message.reply_photo(
+        photo=item['image_url'],
+        caption=text,
+        parse_mode='HTML'
+    )
+
+    # Кнопка назад
+    keyboard = [[InlineKeyboardButton("🔙 Назад", callback_data=f'show_{category}')]]
+    await query.message.reply_text(
+        "Выберите действие:",
+        reply_markup=InlineKeyboardMarkup(keyboard)
+    )
+###### 3.9.	Настройка запуска бота в самой среде программирования:
+def main():
+    try:
+        app = Application.builder().token(TOKEN).build()
+        app.add_handler(CommandHandler('start', start))
+        app.add_handler(CallbackQueryHandler(handle_button))
+
+        logger.info("Бот запускается...")
+        app.run_polling()
+    except Exception as e:
+        logger.error(f"Ошибка запуска: {e}")
+
+## Описание достигнутых результатов по проектной практике:
+#### Вариативная часть задания:
+Создан Telegram-bot на Python. Он соответствует заданию на эту часть и полностью функционирует, содержит в себе достаточно большой объём информации.
