Update Вариативная часть задания.md

--- a/docs/Вариативная часть задания.md
+++ b/docs/Вариативная часть задания.md
@@ -16,11 +16,11 @@ from telegram import Update, InlineKeyboardButton, InlineKeyboardMarkup
 from telegram.ext import Application, CommandHandler, CallbackQueryHandler, ContextTypes
 ###### 3.2.	Сохраняем наш токен в переменной с названием TOKEN
 ###### 3.3.	Настраиваем логгирование:
-logging.basicConfig(
+''' logging.basicConfig(
     format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',
     level=logging.INFO
 )
-logger = logging.getLogger(__name__)
+logger = logging.getLogger(__name__)'''
 ###### 3.4.	Вводим данные о фильмах, персонажах, комиксах:
 data = {
     "movies": {
