--- a/docs/Вариативная часть задания.md
+++ b/docs/Вариативная часть задания.md
@@ -11,16 +11,17 @@
 #### 2.	Далее для работы нам нужно получить собственный токен для Telegram-bot. В боте @BotFather создаём бота и получаем собственный токен, далее он понадобится нам в коде.
 #### 3.	Далее начинаем работать над ботом непосредственно в коде:
 ###### 3.1.	Подключаем библиотеки:
-import logging
+``` import logging
 from telegram import Update, InlineKeyboardButton, InlineKeyboardMarkup
 from telegram.ext import Application, CommandHandler, CallbackQueryHandler, ContextTypes
+```
 ###### 3.2.	Сохраняем наш токен в переменной с названием TOKEN
 ###### 3.3.	Настраиваем логгирование:
-''' logging.basicConfig(
+logging.basicConfig(
     format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',
     level=logging.INFO
 )
-logger = logging.getLogger(__name__)'''
+logger = logging.getLogger(__name__)
 ###### 3.4.	Вводим данные о фильмах, персонажах, комиксах:
 data = {
     "movies": {
