--- a/docs/Вариативная часть задания.md
+++ b/docs/Вариативная часть задания.md
@@ -17,13 +17,13 @@ from telegram.ext import Application, CommandHandler, CallbackQueryHandler, Cont
 ```
 ###### 3.2.	Сохраняем наш токен в переменной с названием TOKEN
 ###### 3.3.	Настраиваем логгирование:
-logging.basicConfig(
+``` logging.basicConfig(
     format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',
     level=logging.INFO
 )
-logger = logging.getLogger(__name__)
+logger = logging.getLogger(__name__) ```
 ###### 3.4.	Вводим данные о фильмах, персонажах, комиксах:
-data = {
+``` data = {
     "movies": {
     "avengers_endgame": {
         "title": "Мстители: Финал",
@@ -92,9 +92,9 @@ data = {
         "image_url": "https://cdn.marvel.com/u/prod/marvel/i/mg/2/f0/511c078aa9163/standard_incredible.jpg"
     }
 }
-}
+}```
 ###### 3.5.	Прописываем функцию /start. Это начало работы нашего бота, то, что пользователь видит, когда впервые заходит в него:
-async def start(update: Update, context: ContextTypes.DEFAULT_TYPE) -> None:
+```async def start(update: Update, context: ContextTypes.DEFAULT_TYPE) -> None:
     """Главное меню"""
     if update.message:
         message = update.message
@@ -109,9 +109,9 @@ async def start(update: Update, context: ContextTypes.DEFAULT_TYPE) -> None:
     await message.reply_text(
         'Добро пожаловать в энциклопедию Marvel! Выберите категорию:',
         reply_markup=InlineKeyboardMarkup(keyboard)
-    )
+    )```
 ###### 3.6.	Обрабатываем кнопки с выбором категорий:
-async def handle_button(update: Update, context: ContextTypes.DEFAULT_TYPE) -> None:
+```async def handle_button(update: Update, context: ContextTypes.DEFAULT_TYPE) -> None:
     """Обработчик кнопок"""
     query = update.callback_query
     await query.answer()
@@ -136,10 +136,10 @@ async def handle_button(update: Update, context: ContextTypes.DEFAULT_TYPE) -> N
             await show_item(query, "comics", query.data[6:])
     except Exception as e:
         logger.error(f"Ошибка: {e}")
-        await query.message.reply_text("Произошла ошибка. Попробуйте еще раз.")
+        await query.message.reply_text("Произошла ошибка. Попробуйте еще раз.")```
 Также было важно включить в этот раздел обработку ошибок для комфорта пользователя.
 ###### 3.7.	Обработка выбора категории:
-async def show_category(query, category, title):
+```async def show_category(query, category, title):
     """Показать меню категории"""
     items = data[category]
     keyboard = []
@@ -155,9 +155,9 @@ async def show_category(query, category, title):
     await query.message.reply_text(
         text=f"Выберите {title.lower()}:",
         reply_markup=InlineKeyboardMarkup(keyboard)
-    )
+    )```
 ###### 3.8.	Обработка выбора элементов в категории:
-async def show_item(query, category, item_id):
+```async def show_item(query, category, item_id):
     """Показать информацию о выбранном элементе с картинкой"""
     item = data[category][item_id]
     text = f"<b>{item.get('name', item.get('title'))}</b>"
@@ -195,9 +195,9 @@ async def show_item(query, category, item_id):
     await query.message.reply_text(
         "Выберите действие:",
         reply_markup=InlineKeyboardMarkup(keyboard)
-    )
+    )```
 ###### 3.9.	Настройка запуска бота в самой среде программирования:
-def main():
+```def main():
     try:
         app = Application.builder().token(TOKEN).build()
         app.add_handler(CommandHandler('start', start))
@@ -207,7 +207,7 @@ def main():
         app.run_polling()
     except Exception as e:
         logger.error(f"Ошибка запуска: {e}")
-
+```
 ## Описание достигнутых результатов по проектной практике:
 #### Вариативная часть задания:
 Создан Telegram-bot на Python. Он соответствует заданию на эту часть и полностью функционирует, содержит в себе достаточно большой объём информации.
