Update Вариативная часть задания.md

--- a/docs/Вариативная часть задания.md
+++ b/docs/Вариативная часть задания.md
@@ -225,6 +225,7 @@ def main():
 ## Описание достигнутых результатов по проектной практике:
 #### Использованная литература:
 Курс Python-разработчик: https://practicum.yandex.ru/backend-developer/?var=pyth117&utm_source=yandex&utm_medium=cpc&utm_campaign=Yan_Sch_RF_Prog_backDe_b2c_Gener_Regular_exp-txt-B_460&utm_content=sty_search:s_none:cid_118788541:gid_5553126065:pid_54483860380:aid_16903838660:crid_0:rid_54483860380:p_1:pty_premium:mty_syn:mkw_:dty_desktop:cgcid_26898188:rn_Дмитровский%20городской%20округ:rid_98582&utm_term=программирование%20python%20бесплатно&yclid=1837273923340730367
+Create a Telegram Bot using Python: https://www.geeksforgeeks.org/create-a-telegram-bot-using-python/
 ## Описание достигнутых результатов по проектной практике:
 #### Вариативная часть задания:
 Создан Telegram-bot на Python. Он соответствует заданию на эту часть и полностью функционирует, содержит в себе достаточно большой объём информации.
